<resources>
    <string name="app_name">Music Salon</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start_period">Period start</string>
    <string name="end_period">Period end</string>
    <string name="result">Result</string>
    <string name="find_shop">Find the nearest shop</string>
    <string name="submit_period">Submit period</string>
    <string name="execute_query">Execute query</string>
    <string name="q_most_sold_for_the_period">Most sold CDs for the period</string>
    <string name="q_most_sold">Most sold CDs</string>
    <string name="q_sales_info_by_author">Sales info by authors</string>
    <string name="date_regex">[0-9]{2}-[0-9]{2}-[0-9]{4}</string>
    <string name="option_first">Selection records by period</string>
    <string name="option_second">Searching the nearest shop</string>
    <string name="nearest_shop">Nearest shop</string>
    <string name="find_nearest_shop">Find nearest shop</string>
    <string name="choose">Choose</string>
    <string name="title_activity_find_shop">FindShopActivity</string>
    <string name="nemiga">Комсомольская улица, 13А</string>
    <string name="railway_station">Привокзальная площадь, 3</string>
    <string name="vostok">улица Калиновского, 82к2</string>
    <string name="oktyabrskaya">проспект Независимости, 23</string>
</resources>