<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_period_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_period"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_period_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_period_start"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:textSize="20sp"
        android:hint="Start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/back"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_period_start"
        app:layout_constraintBottom_toTopOf="@+id/tv_period_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_period_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_period"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/et_period_start"
        app:layout_constraintBottom_toTopOf="@+id/et_period_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/et_period_end"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:textSize="20sp"
        android:hint="End"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/back"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_period_end"
        app:layout_constraintBottom_toTopOf="@id/layout_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/et_period_end"
        app:layout_constraintBottom_toBottomOf="@+id/button_сhoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
            android:id="@+id/tv_result_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <fragment
        android:id="@+id/button_сhoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.cpptest.ButtonFragment"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/layout_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@layout/button_fragment"
        />
</androidx.constraintlayout.widget.ConstraintLayout>